# avr_simulator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/sim_gen/: Makefile  expt_decoder.py  gen_common.py  gen_decode_body.py  gen_impl_hdr.py  gen_instrn_body.py  gen_instrn_enum.py  gen_instrn_hdr.py  gen_shell.py  gen_wrpr_body.py  gen_wrpr_hdr.py  instrn_info.h  notes.txt  pattern.py  pattern_utils.py  sim_gen.h  write_cmpl_cpp.py  write_compl_hdr.py  write_impl_hdr.py  write_instrn_cpp.py  write_instrn_hdr.py  write_wrpr_cpp.py  write_wrpr_hdr.py
src/sim_gen/specs/: alu_ops.json  branch_ops.json  call_ops.json  io_ops.json  logic_ops.json  misc_ops.json  sreg_flags.json  sreg_ops.json  xfer_ops.json
src/simulation/: CMakeLists.txt  all_ops.h  alu_ops.cpp  alu_ops.h  alu_ops_impl.cpp  alu_ops_mc.cpp  alu_ops_mc.h  bitset_wrappers.h  branch_ops.cpp  branch_ops.h  branch_ops_impl.cpp  branch_ops_mc.cpp  branch_ops_mc.h  call_ops.cpp  call_ops.h  call_ops_impl.cpp  call_ops_mc.cpp  call_ops_mc.h  decoder.h  environment.cpp  environment.h  exceptions.h  instructions.h  io_ops.cpp  io_ops.h  io_ops_impl.cpp  io_ops_mc.cpp  io_ops_mc.h  log_ops.cpp  log_ops.h  regs_mems.h  simple_utils.h  sreg_ops.cpp  sreg_ops.h  sreg_ops_impl.cpp  sreg_ops_mc.cpp  sreg_ops_mc.h  status_reg.h  types.h  xfer_ops.cpp  (+4 more)
src/simulation/expt/: alu_ops2.cpp  alu_ops2.h
src/simulation/gen1/: alu_ops.cpp  alu_ops.h  alu_ops_impl.h  branch_ops.cpp  branch_ops.h  branch_ops_impl.h  call_ops.cpp  call_ops.h  call_ops_impl.h  io_ops.cpp  io_ops.h  io_ops_impl.h  logic_ops.cpp  logic_ops.h  sreg_ops.cpp  sreg_ops.h  sreg_ops_impl.h  xfer_ops.cpp  xfer_ops.h  xfer_ops_impl.h
src/simulation/infra/: control_unit.h  environment.h  exceptions.h  status_reg.h  types.h
src/simulation/ops/: all_ops.h  alu_ops_impl.cpp  branch_ops_impl.cpp  call_ops_impl.cpp  decoder.cpp  decoder.h  instrn_enum.h  io_ops_impl.cpp  logic_ops_impl.cpp  sreg_ops_impl.cpp  xfer_ops_impl.cpp
src/simulation/v1/: alu_ops.cpp  alu_ops.h  alu_ops_impl.h  branch_ops_impl.h  call_ops.h  call_ops_impl.h  io_ops.cpp  io_ops.h  io_ops_impl.h  logic_ops.h  sreg_ops.h  sreg_ops_impl.h  xfer_ops.cpp  xfer_ops_impl.h
src/utils/: hash_map.h
tst/: CMakeLists.txt
tst/simulation/: add.cpp  flags_test.cpp  init_test.cpp
